<resources>
    <string name="app_name">PhoneCheckApp1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_phone_num">Phone Num</string>
    <string name="title_notifications">Notifications</string>
    <string name="phone_info_will_appear_here">Phone Info will appear here</string>
    <string name="send">Send</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="flag">flag</string>
    <string name="show_more">Показать больше</string>
</resources>