<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.phonecheckapp1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_phone_num"
        android:name="com.example.phonecheckapp1.ui.phone_num.PhoneNumFragment"
        android:label="@string/title_phone_num"
        tools:layout="@layout/fragment_phone_number" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.phonecheckapp1.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>